--- a/chess2/index.html
+++ b/chess2/index.html
@@ -19,7 +19,7 @@
             <p class="browsehappy">You are using an <strong>outdated</strong> browser. Please <a href="#">upgrade your browser</a> to improve your experience.</p>
         <![endif]-->
     <canvas id="GameBoard">
-
+    <script src = "pieceFunctions.js"></script>
     <script src="index.js"></script>
 </body>
 
